Changes from Version 0.15-33 to 0.15-34 [30-Mar-2022]

* Fixed warnings flagged on CRAN (thanks Zhenghua!) [i) snomadr.cpp:374:60: warning: void operator delete(void*, std::size_t) called on pointer returned from a mismatched allocation function [-Wmismatched-new-delete], ii) nomad_src/Sgtelib_Model_Search.cpp:957:43: warning: array subscript -1 is outside array bounds of bool [2147483647] [-Warray-bounds]]

* Additional casting of x as as.matrix() in is.fullrank()

Changes from Version 0.15-32 to 0.15-33 [02-Feb-2021]

* Updated NOMAD to version 3.9.1

* Removed dependency on C++11 random_shuffle per recommendation from R development team (thanks Zhenghua!)

* Followed R core team request to "Please move rgl to Suggests and use conditionally (see 1.1.3.1 of Writing R Extensions) at the next package update"

Changes from Version 0.15-31 to 0.15-32 [19-Nov-2019]

* Corrected return value for mgcv_tmm() (was void, not valid address of R object)

* Added crs.messages=FALSE capabilities to clsd()

Changes from Version 0.15-30 to 0.15-31 [01-May-2018]

* basis="auto" was default, doc/code discrepancy fixed

* Hattip to Thibault Vatter who patched an issue with weights not being functional in crsiv.R

* Fixed issue with compiler compliance to support ICC and retain backwards compatability with MSVC C++

Changes from Version 0.15-29 to 0.15-30 [03-Dec-2017]

* dim.plot() replaced by n2mfrow() for determining layout of multiple
  figures on one device

* Fixed issue where, occasionally during cross-validation, execution of
  the function npglpreg() could halt with an error indicating missing
  value needed where TRUE/FALSE needed

Changes from Version 0.15-28 to 0.15-29 [06-Oct-2017]

* Fixed issue pointed out by Brian Ripley (thanks!) about double ** _X; in the nomad code

* Updated licence to GPL (>= 3)

Changes from Version 0.15-27 to 0.15-28 [06-Oct-2017]
