@@ -1,3 +1,12 @@
+/* We would like to acknowledge the contributions of the GNU GSL
+   authors. In particular, we adapt the GNU GSL B-spline routine
+   gsl_bspline.c adding automated support for quantile knots (in
+   addition to uniform knots), providing missing functionality for
+   derivatives, and for extending the splines beyond their
+   endpoints. The source files were downloaded from
+   http://www.gnu.org/software/gsl/ version 1.14.*, distributed under
+   the terms of the GPL, version 2 or later. */
+
 #include <stdio.h>
 #include <stdlib.h>
 #include <math.h>
