@@ -1,3 +1,7 @@
+Changes from Version 0.15-34 to 0.15-35 [09-Oct-2022]
+
+* Explicit acknowledgment in DESCRIPTION of code gsl_bspline.c/.h adapted from the GNU GSL library with further details appended to gsl_bspline.c/.h (thanks to Professor Brian Ripley for noting this oversight).Changes from Version 0.15-33 to 0.15-34 [30-Mar-2022]
+
 Changes from Version 0.15-33 to 0.15-34 [30-Mar-2022]
 
 * Fixed warnings flagged on CRAN (thanks Zhenghua!) [i) snomadr.cpp:374:60: warning: void operator delete(void*, std::size_t) called on pointer returned from a mismatched allocation function [-Wmismatched-new-delete], ii) nomad_src/Sgtelib_Model_Search.cpp:957:43: warning: array subscript -1 is outside array bounds of bool [2147483647] [-Warray-bounds]]
